# relaybaton-desktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cpp  config.h  core.h  error.qml  main.cpp  main.qml  openfile.qml  openlogfile.qml  qml.qrc  qtquickcontrols2.conf  savefile.qml
